setting up the samples

--- a/samples/date-time/sample.yaml
+++ b/samples/date-time/sample.yaml
@@ -1,7 +1,7 @@
 sample:
-  name: Accelerometer sample
+  name: RTC sample
 tests:
-  test_build:
+  samples.nrf9160.rtc:
     build_only: true
     build_on_all: true
     platform_whitelist: actinius_icarus_ns
