--- a/sample.yaml
+++ b/sample.yaml
@@ -7,3 +7,15 @@ tests:
     build_on_all: true
     platform_whitelist: actinius_icarus_ns
     tags: ci_build
+  sample.cellular.gnss:
+    sysbuild: true
+    build_only: true
+    integration_platforms:
+      - nrf9151dk/nrf9151/ns
+      - nrf9160dk/nrf9160/ns
+      - nrf9161dk/nrf9161/ns
+    platform_allow:
+      - nrf9151dk/nrf9151/ns
+      - nrf9160dk/nrf9160/ns
+      - nrf9161dk/nrf9161/ns
+    tags: ci_build sysbuild
