--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@
 
 cmake_minimum_required(VERSION 3.20.0)
 
+find_package(Zephyr HINTS $ENV{ZEPHYR_BASE})
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(bus_rtos)
 
