--- a/sample.yaml
+++ b/sample.yaml
@@ -24,3 +24,8 @@ tests:
     build_on_all: true
     platform_whitelist: actinius_icarus_ns
     tags: ci_build
+  samples.nrf9160.rtc:
+    build_only: true
+    build_on_all: true
+    platform_whitelist: actinius_icarus_ns
+    tags: ci_build
